Fixed an issue in the CSS file - wrong letter spacing units, converted into rem

--- a/insidebox (1)/css/styles.css
+++ b/insidebox (1)/css/styles.css
@@ -62,7 +62,7 @@ h1 {
     color: var(--heading-grey);
     font-weight: 700;
     font-size: 1.25rem;
-    letter-spacing: -3%;
+    letter-spacing: -0.0375rem;
     line-height: 1.5;
     margin-bottom: .5rem;
 }
